<resources>
    <string name="app_name">KotlinWeatherApp</string>
    <string name="search_button_content">search</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="find">Find</string>
    <string name="back">back</string>
    <string name="feels_like">feels like</string>
    <string name="wind_speed">wind speed</string>
    <string name="humidity">humidity</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="pressure">pressure</string>
    <string name="city_not_found">City not found</string>
    <string name="lat_key">latitude</string>
    <string name="lon_key">longitude</string>
    <string name="loc">location</string>
</resources>